[tool.poetry]
name = "ATRIbot"
version = "0.1.0"
description = "ATRIbot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.9"
nonebot2 = "^2.0.0rc2"
nonebot-adapter-onebot = "^2.2.0"
requests = "^2.28.1"
nonebot-plugin-blacklist = "^0.3.0"
mcstatus = "^10.0.1"
elf-rss = "^2.6.15"

[tool.poetry.dev-dependencies]
nb-cli = "^1.0.3"

[tool.nonebot]
plugins = ["nonebot_plugin_blacklist", "ELF_RSS2"]
plugin_dirs = ["atribot/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
