[tool.poetry]
name = "ATRIbot"
version = "0.1.0"
description = "ATRIbot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
nonebot2 = "^2.0.0rc2"
nonebot-adapter-onebot = "^2.2.0"
requests = "^2.28.1"
mcstatus = "^10.0.1"
elf-rss = "^2.6.15"
nonebot-plugin-bing-chat = "^0.7.11"
nonebot-plugin-access-control = "^0.4.1"
edgegpt = "0.2.1"

[tool.poetry.dev-dependencies]
nb-cli = "^1.0.3"

[tool.nonebot]
plugins = ["nonebot_plugin_access_control", "ELF_RSS2", "nonebot_plugin_bing_chat"]
plugin_dirs = ["atribot/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
