[tool.poetry]
name = "ATRIbot"
version = "1.0.0"
description = "ATRIbot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nonebot2 = "^2.0.1"
nonebot-adapter-onebot = "^2.2.3"
mcstatus = "^11.0.0"
elf-rss = "^2.6.20"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
nb-cli = "^1.0.3"
flake8 = "^6.1.0"

[tool.nonebot]
plugins = ["ELF_RSS2"]
plugin_dirs = ["atribot/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
